added link to all wikis on welcome screen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<center><h3>Click below to go to all Wiki's</h3>
+<%= button_to "Wiki's", wikis_path, :method => "get" %></center>
