--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,9 +1,27 @@
-<%= form_for @wiki do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-    
-    <%= f.submit "Save" %>
-<% end %>
+<h1>New Wiki</h1>
+
+<div class='row'>
+    <div class='col-md-4'>
+        <h4>*Guidelines*</h4>
+            <ul>
+                <li>Be Creative!</li>
+                <li>Be Curtious!</li>
+                <li>Learn!</li>
+            </ul>
+    </div>
+    <div class='col-md-8'>
+        <%= form_for @wiki do |f| %>
+            <div class='form-group'>
+                <%= f.label :title %>
+                <%= f.text_field :title, class: 'form-control', placeholder: 'Enter Wiki Title Here' %>
+            </div>
+            <div class='form-group'>
+                <%= f.label :body %>
+                <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: 'Enter Wiki Body' %>
+            </div>
+            <div class='form-group'>
+                <%= f.submit 'Save', class: 'btn btn-success' %>
+            </div>
+        <% end %>
+    </div>
+</div>
