--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -8,3 +8,6 @@
             </div>
         </div>
     <% end %>
+    <div class="col-md-4">
+        <%= link_to "New Wiki", new_wiki_path(@wiki), class: 'btn btn-success' %>
+    </div>
