--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
           
           <div class="pull-right user-info">
               <% if user_signed_in? %>
-                   Logged in as <strong><%= current_user.email %></strong>.
+                   Logged in as <strong><%= current_user.email %>..<%= current_user.name %></strong>.
                        <div class="pull-right">
-                            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+                            <%= link_to 'Profile', edit_user_registration_path, :class => 'navbar-link' %> |
                             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
                        </div>
               <% else %>
