--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,8 +5,11 @@
         <p><%= @wiki.body %></p>
     </div>
     <div class="col-md-4">
+        <%= link_to "Back", wikis_path, class: 'btn btn-success' %>
         <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-        <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+            <% if policy(@wiki).destroy? %>
+                <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+            <% end %>
     </div>
 </div>
 
