--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,6 +40,13 @@
   </div>
 <% end %>
 
+<% if current_user.premium_user? %>
+  <h2>Downgrade Account</h2>
+  <%= link_to "Yes, downgrade my account", downgrade_path, class: 'btn btn-warning', data: { confirm: 'Are you sure you want to downgrade and make all your wikis public?' } %>
+<% else %>
+  <%= link_to('Upgrade to Premium Membership Plan', new_charge_path, :class => 'btn btn-large btn-primary')  %>
+<% end %>
+
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
