--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,40 @@
-<center><h3>Click below to go to all Wiki's</h3>
-<%= button_to "Wiki's", wikis_path, :method => "get" %></center>
+<div class="container">
+    <div class="row">
+        <h1 class="text-center">Blocipedia: Social, Markdown Wikis</h1>
+    </div>  
+ 
+    <div class="row text-center">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6 content-box">
+            <h2> Create and share markdown wikis </h2><br /> <br />
+            <div class="btn-group">
+                <%= link_to'Sign Up', new_user_registration_path, :class => 'btn btn-large btn-primary' %>
+            </div> 
+        </div>
+        <div class="col-md-3">
+        </div>  
+    </div> 
+ 
+    <div class="row text-center">
+        <div class="col-md-3">
+        </div>  
+        <div class="col-md-3">
+            <div class="point">
+                <h4> Create as many public wikis you want! </h4>
+                <br>
+                <%= link_to('Free Plan', new_user_registration_path, :class => 'btn btn-large btn-primary')  %>
+            </div>  
+        </div>
+       
+        <div class="col-md-3">
+            <div class="point private-padding">
+                <h4>Create private wikis!</h4><br>          
+                <%= link_to('Premium Plan', new_charge_path, :class => 'btn btn-large btn-primary')  %>
+            </div>
+        </div>
+        <div class="col-md-3">
+        </div>  
+    </div >    
+ 
+</div>  
