--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -9,9 +9,13 @@
                   <% @wikis.each do |wiki| %>
                   <tr> 
                     <td class="col-md-2"> <%= link_to  wiki.title, wiki_path(wiki.id) %> </td>
-                    <td class="col-md-1"> <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn success' %> </td>
-                    <td class="col-md-1"> <%= link_to "Delete", wiki, method: :delete, class: 'btn btn danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %> </td>
-                    </tr> 
+                    <% if current_user.present? %>
+                        <td class="col-md-1"> <%= link_to "Edit", edit_wiki_path(wiki), class: 'btn btn success' %> </td>
+                        <% if current_user.admin? %>
+                            <td class="col-md-1"> <%= link_to "Delete", wiki, method: :delete, class: 'btn btn danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %> </td>
+                        <% end %>  
+                    <% end %>                    
+                  </tr> 
                   <% end %> 
                 </tbody>
              </table>  
