--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -22,6 +22,12 @@
             <div class='form-group'>
                 <%= f.submit 'Save', class: 'btn btn-success' %>
             </div>
+            <% if current_user.role == 'premium_user' || current_user.role == 'admin' %>
+                <div class='form-group'>
+                    <%= f.label :private %>
+                    <%= f.check_box :private %>
+                </div>
+            <% end %>            
         <% end %>
     </div>
 </div>
