--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @wiki.title %></h1>
+<h1><%= markdown_to_html@wiki.title %></h1>
     
 <div class="row">
     <div class="col-md-8">
-        <p><%= @wiki.body %></p>
+        <p><%= markdown_to_html@wiki.body %></p>
     </div>
     <div class="col-md-4">
         <%= link_to "Back", wikis_path, class: 'btn btn-success' %>
