--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -27,7 +27,19 @@
                     <%= f.label :private %>
                     <%= f.check_box :private %>
                 </div>
+                <h3> Manage Collaborators </h3>
+                <table class="table">
+                    <% @wiki.collaborators.each do |collaborator| %>
+                    <tr>
+                        <td> <%= collaborator.user.name %> </td>
+                        <td> 
+                            <%= link_to "Remove Collaborator", collaborator_path(collaborator.id), method: :delete, class: 'btn btn-danger' %>
+                        </td> 
+                    </tr>    
+                    <% end %> 
+                </table>
+
+                <%= link_to "Add Collaborator", new_collaborator_path(wiki_id: @wiki.id), class: 'btn btn-success' %>                
             <% end %>
         <% end %>
     </div>
-</div>
